Stylesheet/emote/tag updates 2012-11-01

--- a/emotes/mlas1animotes.yaml
+++ b/emotes/mlas1animotes.yaml
@@ -221,6 +221,10 @@
     CSS: {margin-left: 3px, margin-right: 3px}
     Image: http://b.thumbs.redditmedia.com/Wo8GACMOwWutYTRU.png
     Size: [150, 200]
+/omgomgomg:
+  null:
+    Image: http://d.thumbs.redditmedia.com/6Q7McH6YSzuQ2-7K.png
+    Size: [150, 150]
 /peanutbutterpinkiepie:
   null:
     CSS: {margin-left: 3px, margin-right: 3px}
@@ -340,6 +344,10 @@
     CSS: {margin-left: 3px, margin-right: 3px}
     Image: http://b.thumbs.redditmedia.com/fs0j48KX--XRpppm.png
     Size: [400, 300]
+/twisax:
+  null:
+    Image: http://e.thumbs.redditmedia.com/vLOxxIF4aS8DwblL.png
+    Size: [151, 150]
 /twist:
   null:
     CSS: {margin-left: 3px, margin-right: 3px}
