--- a/emotes/mylittleandysonic1.yaml
+++ b/emotes/mylittleandysonic1.yaml
@@ -28,6 +28,11 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -1689]
     Size: [210, 152]
+/ajsay:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-270, -393]
+    Size: [150, 150]
 /ajsign:
   null:
     CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
@@ -85,6 +90,11 @@
     Image: http://d.thumbs.redditmedia.com/J1FVwBg6sOk2C8VE.png
     Offset: [0, -424]
     Size: [131, 200]
+/bonshades:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-180, -2]
+    Size: [107, 110]
 /bonwut:
   null:
     Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
@@ -185,6 +195,11 @@
     Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -2775]
     Size: [127, 163]
+/daring:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-263, -241]
+    Size: [123, 150]
 /darkfun:
   null:
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
@@ -219,6 +234,11 @@
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2769]
     Size: [106, 117]
+/derpquite:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-124, -241]
+    Size: [137, 150]
 /derpshrug:
   null:
     Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
@@ -282,6 +302,11 @@
   null:
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Size: [194, 252]
+/disshrug:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -393]
+    Size: [137, 150]
 /diswut:
   null:
     Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
@@ -456,6 +481,11 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -2145]
     Size: [204, 152]
+/fluffycord:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -747]
+    Size: [217, 200]
 /flutalot:
   null:
     Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
@@ -506,6 +536,11 @@
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -1110]
     Size: [180, 202]
+/gildafuck:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -241]
+    Size: [120, 150]
 /gildafury:
   null:
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
@@ -600,6 +635,11 @@
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -2618]
     Size: [184, 151]
+/oppositesattract:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-141, -393]
+    Size: [127, 150]
 /orange!:
   null:
     CSS: {color: orange!important, cursor: text!important}
@@ -652,6 +692,16 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -775]
     Size: [227, 152]
+/pphappy:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-259, -119]
+    Size: [103, 120]
+/pphmmm:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-137, -119]
+    Size: [120, 120]
 /ppsign:
   null:
     CSS: {cursor: default!important, line-height: 24px!important, overflow: hidden!important,
@@ -681,6 +731,16 @@
     Image: http://c.thumbs.redditmedia.com/JZJOvhEmEounQ-Fn.png
     Offset: [0, -787]
     Size: [166, 152]
+/ppthink:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -545]
+    Size: [107, 150]
+/pptrain:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-111, -545]
+    Size: [183, 200]
 /ppwhat:
   null:
     Image: http://d.thumbs.redditmedia.com/J1FVwBg6sOk2C8VE.png
@@ -718,6 +778,11 @@
     Image: http://c.thumbs.redditmedia.com/XFTU_KScSRqivR8z.png
     Offset: [0, -504]
     Size: [207, 202]
+/rarirage:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-289, -2]
+    Size: [93, 115]
 /rarisup:
   null:
     Image: http://d.thumbs.redditmedia.com/J1FVwBg6sOk2C8VE.png
@@ -747,6 +812,11 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -623]
     Size: [230, 152]
+/rdpoker:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -119]
+    Size: [133, 120]
 /red!:
   null:
     CSS: {color: red!important, cursor: text!important}
@@ -852,6 +922,11 @@
     Image: http://a.thumbs.redditmedia.com/YLUHfnn5zXXkkrEx.png
     Offset: [0, -152]
     Size: [234, 167]
+/slowcord:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-77, -2]
+    Size: [101, 98]
 /soarinshock:
   null:
     Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
@@ -941,6 +1016,11 @@
         0 black,0 1px black,1px 0 black,0 -1px black!important', text-transform: uppercase!important,
       top: 45px!important, width: 100px!important}
     Type: Custom
+/twiststare:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-2, -2]
+    Size: [73, 70]
 /twiteehee:
   null:
     Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
@@ -956,6 +1036,11 @@
     Image: http://f.thumbs.redditmedia.com/9uyO-Q_ihk8UHcyk.png
     Offset: [0, -202]
     Size: [210, 202]
+/twiyou:
+  null:
+    Image: http://e.thumbs.redditmedia.com/RgrYA7vNLsRRymqv.png
+    Offset: [-364, -119]
+    Size: [99, 120]
 /txt!:
   null:
     CSS: {color: inherit!important, cursor: text!important}
