--- a/emotes/mylittlelistentothis.yaml
+++ b/emotes/mylittlelistentothis.yaml
@@ -1,3 +1,7 @@
+/YOLO:
+  null:
+    Image: http://c.thumbs.redditmedia.com/VCjBvB80Qt3wEGth.png
+    Size: [180, 320]
 /adagio:
   null:
     Image: http://c.thumbs.redditmedia.com/5cyD4ZGMPahaXfqD.png
@@ -170,11 +174,6 @@
   null:
     Image: http://e.thumbs.redditmedia.com/8epVY5b9BqQr1Hkp.png
     Size: [100, 102]
-/pheispinkieplushie:
-  null:
-    Image: http://a.thumbs.redditmedia.com/8EHJM305b6rA_atT.png
-    Offset: [-92, 0]
-    Size: [238, 269]
 /pinkiebone:
   null:
     Image: http://e.thumbs.redditmedia.com/cPVjjjJ-QcdrsTrR.png
@@ -200,11 +199,6 @@
     Image: http://e.thumbs.redditmedia.com/L7zH-FChTTGLTkML.png
     Offset: [-182, -182]
     Size: [90, 90]
-/ppp:
-  null:
-    Image: http://a.thumbs.redditmedia.com/8EHJM305b6rA_atT.png
-    Offset: [-92, 0]
-    Size: [238, 269]
 /rarityumm:
   null:
     Image: http://e.thumbs.redditmedia.com/L7zH-FChTTGLTkML.png
@@ -318,3 +312,7 @@
     Image: http://a.thumbs.redditmedia.com/neArTCTLtPUxkALf.png
     Offset: [0, -273]
     Size: [90, 90]
+/yolo:
+  null:
+    Image: http://c.thumbs.redditmedia.com/VCjBvB80Qt3wEGth.png
+    Size: [180, 320]
