--- a/emotes/mylittlenanners.yaml
+++ b/emotes/mylittlenanners.yaml
@@ -2531,3 +2531,7 @@
     Image: http://f.thumbs.redditmedia.com/rxi2oy-sx9BCxEW5.png
     Offset: [-70, -140]
     Size: [70, 70]
+/yolo:
+  null:
+    Image: http://f.thumbs.redditmedia.com/rdAuArNeRig4pfJw.png
+    Size: [200, 208]
