--- a/tags/mlas1animotes.yaml
+++ b/tags/mlas1animotes.yaml
@@ -35,6 +35,7 @@
 /dashcheer: [+animote, +rainbowdash]
 /derpslide: [+animote, +derpy]
 /derpydance: [+animote, +derpy]
+/derpystomp: [+animote, +derpy]
 /floatyesplin: [+animote, +ocpony]
 /fswb: [+animote, +fluttershy]
 /giggle: [+animote, +pinkiepie]
@@ -42,6 +43,7 @@
 /lbspin: [+animote, +bonbon, +lyra]
 /lickiepie: [+animote, +pinkiepie]
 /octcake: [+animote, +octavia]
+/omgomgomg: [+animote, +rainbowdash]
 /peanutbutterpinkiepie: [+animote, +pinkiepie]
 /pomf: [+animote, +rainbowdash]
 /ppbop: [+animote, +headbop, +pinkiepie]
@@ -66,5 +68,6 @@
 /twilightsparkle: [+v]
 /twipeck: [+animote, +twilightsparkle]
 /twirun: [+animote, +twilightsparkle]
+/twisax: [+animote, +twilightsparkle]
 /twist: [+animote, +twist]
 /twitwitch: [+animote, +twilightsparkle]
