--- a/tags/mylittleandysonic1.yaml
+++ b/tags/mylittleandysonic1.yaml
@@ -4,6 +4,7 @@
 /ajFoF: [+applejack]
 /ajfof: [+v]
 /ajfun: [+applejack, +fun, +questionable]
+/ajsay: [+applejack]
 /ajsign: [+applejack, +imagemacro]
 /applejack!: [+formatting]
 /applepuff: [+applejack, +mashup]
@@ -14,6 +15,7 @@
 /bmwat: [+bigmac]
 /bonfun: [+bonbon, +fun, +questionable]
 /bonheart: [+bonbon, +heart]
+/bonshades: [+bonbon]
 /bonwut: [+bonbon]
 /braefun: [+braeburn, +fun, +questionable]
 /bryvoodfun: [+fun, +ocpony, +questionable]
@@ -34,11 +36,13 @@
 /crackle: [+misc]
 /crazypie: [+pinkiepie]
 /creamsicle: [+ocpony]
+/daring: [+daringdo]
 /darkfun: [+fun, +ocpony, +questionable]
 /dashfun: [+fun, +questionable, +rainbowdash]
 /dashsign: [+imagemacro, +rainbowdash]
 /derpfun: [+derpy, +fun, +questionable]
 /derpoops: [+derpy]
+/derpquite: [+derpy]
 /derpshrug: [+derpy]
 /derpsrs: [+derpy]
 /derpysign: [+derpy, +imagemacro]
@@ -50,6 +54,7 @@
 /disexcited: [+discord]
 /disgusta: [+discord]
 /diskate: [+discord]
+/disshrug: [+discord]
 /diswut: [+discord]
 /dod: [+rainbowdash]
 /doitfilly: [+discord]
@@ -85,6 +90,7 @@
 /fillytwidance: [+filly, +twilightsparkle]
 /fillyvinyl: [+filly, +vinylscratch]
 /flitterfun: [+flitter, +fun, +questionable]
+/fluffycord: [+discord]
 /flutalot: [+fluttershy]
 /flutterpout: [+fluttershy]
 /fluttershy!: [+formatting]
@@ -94,6 +100,7 @@
 /frightenpie: [+pinkiepie]
 /genius: [+derpy]
 /gildafriendship: [+gilda]
+/gildafuck: [+gilda]
 /gildafury: [+gilda]
 /green!: [+formatting]
 /greentext!: [+formatting]
@@ -112,6 +119,7 @@
 /macgasp: [+bigmac]
 /noidea: [+nonpony]
 /notenoughbooks: [+twilightsparkle]
+/oppositesattract: [+pinkiepie, +twilightsparkle]
 /orange!: [+formatting]
 /orschfun: [+fun, +ocpony, +questionable]
 /pbf: [+pinkamina, +pinkiepie]
@@ -123,10 +131,14 @@
 /ppfacehoof: [+pinkiepie]
 /ppfof: [+pinkiepie]
 /ppfun: [+fun, +pinkiepie, +questionable]
+/pphappy: [+pinkiepie]
+/pphmmm: [+pinkiepie]
 /ppsign: [+imagemacro, +pinkiepie]
 /ppsly: [+pinkiepie]
 /ppsoawesome: [+pinkiepie]
 /ppteeth: [+pinkiepie]
+/ppthink: [+pinkiepie]
+/pptrain: [+pinkiepie]
 /ppwhat: [+pinkamina, +pinkiepie]
 /psychiatwi: [+twilightsparkle]
 /purple!: [+formatting]
@@ -135,12 +147,14 @@
 /rarfun: [+fun, +questionable, +rarity]
 /rarhorror: [+rarity]
 /rarimad: [+rarity]
+/rarirage: [+rarity]
 /rarisup: [+filly, +rarity]
 /rarity!: [+formatting]
 /rarityfilly: [+filly, +rarity]
 /raritywooo: [+rarity]
 /rarizee: [+mashup, +rarity]
 /rcrfun: [+fun, +ocpony, +questionable]
+/rdpoker: [+rainbowdash]
 /red!: [+formatting]
 /rosefof: [+roseluck]
 /rosefun: [+fun, +questionable, +roseluck]
@@ -158,6 +172,7 @@
 /shitemote: [+hovermote, +nonpony]
 /shyduck: [+fluttershy, +mashup]
 /shyfun: [+fluttershy, +fun, +questionable]
+/slowcord: [+discord, +mashup]
 /soarinshock: [+soarin]
 /sockcord: [+discord]
 /speedyfun: [+fun, +ocpony, +questionable]
@@ -172,9 +187,11 @@
 /twipoke: [+mashup, +twilightsparkle]
 /twiread: [+twilightsparkle]
 /twisign: [+imagemacro, +twilightsparkle]
+/twiststare: [+twist]
 /twiteehee: [+twilightsparkle]
 /twiteeth: [+twilightsparkle]
 /twithis: [+v]
+/twiyou: [+twilightsparkle]
 /txt!: [+formatting]
 /umad: [+pinkiepie]
 /white!: [+formatting]
