--- a/tags/mylittlelistentothis.yaml
+++ b/tags/mylittlelistentothis.yaml
@@ -1,3 +1,4 @@
+/YOLO: [+v]
 /adagio: [+ocpony]
 /awestruck: [+applebloom, +scootaloo, +sweetiebelle]
 /badjokemostlikely: [+nonpony]
@@ -35,13 +36,11 @@
 /phei: [+filly, +twilightsparkle]
 /pheicry: [+animote, +filly, +twilightsparkle]
 /pheidance: [+animote, +filly, +twilightsparkle]
-/pheispinkieplushie: [+nonpony, +pinkiepie]
 /pinkiebone: [+pinkiepie]
 /pinkieshock: [+pinkiepie]
 /pinkiesing: [+pinkiepie]
 /pinkietrombone: [+v]
 /pokerlee: [+cheerilee]
-/ppp: [+v]
 /rarityumm: [+rarity]
 /rdheadbang: [+rainbowdash, +sunglasses]
 /rdheh: [+rainbowdash]
@@ -65,3 +64,4 @@
 /vinylshrug: [+v]
 /vinylspin: [+animote, +filly, +vinylscratch]
 /wubseverywhere: [+octavia, +vinylscratch]
+/yolo: [+nonpony]
