--- a/tags/mylittlenanners.yaml
+++ b/tags/mylittlenanners.yaml
@@ -510,3 +510,4 @@
 /twinom: [+banana, +questionable, +twilightsparkle]
 /twisquintlol: [+twilightsparkle]
 /whatalovelybanana: [+applebloom, +banana, +questionable]
+/yolo: [+twist]
