Resolve /yolo conflict

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -197,6 +197,7 @@ Conflicts:
   /t18:         r/mylittlefoodmanes     # Conflict with r/tacoshy
   /twipoker:    r/mylittlewtf           # Conflict with r/thebestpony
   /woonajuice:  r/mylittledaww          # Duplicated to r/mylittleanime
+  /yolo:        r/mylittlenanners       # Conflict with r/mylittlelistentothis
 
 RootVariantEmotes:
   r/mylittleanime:
