--- a/tags/mylittlelistentothis.yaml
+++ b/tags/mylittlelistentothis.yaml
@@ -1,4 +1,4 @@
-/YOLO: [+v]
+/YOLO: [+remove]
 /adagio: [+ocpony]
 /awestruck: [+applebloom, +scootaloo, +sweetiebelle]
 /badjokemostlikely: [+nonpony]
