Update /rdsad copy to new image file so +v works

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -107,13 +107,13 @@ Generation:
     - /rdsad:
         Emotes:
           "":
-            Image: http://f.thumbs.redditmedia.com/0eHLtku13olw-nLM.png
+            Image: http://c.thumbs.redditmedia.com/X_6_Un81YLgHtOxP.png
             Offset: [-140, -350]
             Size: [70, 70]
       /rrdsad:
         Emotes:
           "":
-            Image: http://a.thumbs.redditmedia.com/upicooe6wp8FpQ80.png
+            Image: http://d.thumbs.redditmedia.com/Z5e0mHCGCF-L8eRK.png
             Offset: [-140, -350]
             Size: [70, 70]
     - /rdsad: [+drop, +hidden, +v]
