Added r/beautybrass and a tag tweak to differentiate Cloudchaser and Flitter

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -108,9 +108,11 @@ TagImplications:
 
   # Background characters
   +ahuizotl: [+canon, +villian]
+  +beautybrass: [+canon, +bgpony, +pony]
   +berrypunch: [+canon, +bgpony, +pony]
   +bonbon: [+canon, +bgpony, +pony]
   +carrottop: [+canon, +bgpony, +pony]
+  +cloudchaser: [+canon, +bgpony, +pony]
   +colgate: [+canon, +bgpony, +pony]
   +daisy: [+canon, +bgpony, +pony]
   +dinky: [+canon, +bgpony, +pony]
