Fix new conflict

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -195,6 +195,7 @@ Conflicts:
   /abwant:      r/mylittlelivestream    # Conflict with r/applebloom
   /abworry:     r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /dw01:        r/daylightemotes        # Conflict with r/gallopfrey
+  /evilhom3r:   r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
   /hugs:        r/mylittledaww          # Conflict with r/mylittlecirclejerk
   /ovenmitt:    r/ainbowdash            # Conflict with r/mylittledramaticstory
   /ppnervous:   r/pinkiepie             # Conflict with r/mlpdrawingschool
