Add APNG->GIF converter and code to support animotes on Chrome through alternative hosting

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -32,6 +32,7 @@
         "emote-classes.css", 
         "combiners-nsfw.css", 
         "extracss-pure.css", 
-        "extracss-webkit.css"
+        "extracss-webkit.css", 
+        "gif-animotes.css"
     ]
 }
