--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -110,13 +110,13 @@ Generation:
     - /rdsad:
         Emotes:
           "":
-            Image: http://c.thumbs.redditmedia.com/X_6_Un81YLgHtOxP.png
+            Image: http://a.thumbs.redditmedia.com/mSf8dSjbL0eTzDg0.png
             Offset: [-140, -350]
             Size: [70, 70]
       /rrdsad:
         Emotes:
           "":
-            Image: http://d.thumbs.redditmedia.com/Z5e0mHCGCF-L8eRK.png
+            Image: http://e.thumbs.redditmedia.com/IhA4lCp2kZh1YHZv.png
             Offset: [-140, -350]
             Size: [70, 70]
     - /rdsad: [+drop, +hidden, +v]
