Small tag update for +babseed

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -65,6 +65,7 @@ TagImplications:
 
   # Significant canon characters
   +angel: [+canon, +major]
+  +babseed: [+canon, +major, +pony]
   +bigmac: [+canon, +major, +pony]
   +braeburn: [+canon, +major, +pony]
   +cadance: [+canon, +major, +pony]
