--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -71,7 +71,7 @@ TagImplications:
   +cadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
-  +chrysalis: [+canon, +major, +pony, +villian]
+  +queenchrysalis: [+canon, +major, +pony, +villian]
   +cockatrice: [+canon, +major]
   +crankydoodle: [+canon, +major]
   +daringdo: [+canon, +major, +pony]
@@ -86,6 +86,7 @@ TagImplications:
   +gummy: [+canon, +major]
   +hoitytoity: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
+  +kingsombra: [+canon, +major, +pony, +villian]
   +maredowell: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villian]
