--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -121,7 +121,9 @@ TagImplications:
   +doctorwhooves: [+canon, +bgpony, +pony, +doctorwho]
   +flitter: [+canon, +bgpony, +pony]
   +lily: [+canon, +bgpony, +pony]
+  +lotus: [+canon, +bgpony, +pony]
   +lyra: [+canon, +bgpony, +pony]
+  +medley: [+canon, +bgpony, +pony]
   +octavia: [+canon, +bgpony, +pony]
   +otherpony: [+canon, +bgpony, +pony]
   +roseluck: [+canon, +bgpony, +pony]
