Stylesheet/emote/tag updates 2012-12-19

--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -7,7 +7,7 @@
 "/aj05": ["+applejack"],
 "/aj06": ["+applejack"],
 "/aj07": ["+applejack"],
-"/aj08": ["+remove"],
+"/aj08": ["+applejack"],
 "/aj09": ["+remove"],
 "/aj10": ["+applejack"],
 "/aj11": ["+applejack"],
@@ -27,7 +27,7 @@
 "/aj25": ["+applejack"],
 "/aj26": ["+applejack"],
 "/aj27": ["+applejack"],
-"/aj28": ["+remove"],
+"/aj28": ["+applejack"],
 "/aj29": ["+remove"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
