Fix (hopefully temporary) conflicts between r/tbpimagedump2 and r/thebestpony

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -194,6 +194,7 @@ Sorting:
 - [r/futemotes, r/ponyanarchism]    # More copies of /fut*
 - [r/idliketobeatree, r/ainbowdash] # /rd* conflicts
 - [r/mylittlemusician, r/mylittlelistentothis] # Copies of some emotes
+- [r/tbpimagedump2, r/thebestpony]  # Probably temporary, for their new subreddit
 
 Conflicts:
   /abwant:      r/mylittlelivestream    # Conflict with r/applebloom
