--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -42,6 +42,7 @@ Subreddits:
 - mlplounge
 - mlpvectors
 - molestia
+- mylittleadventuretime
 - mylittlealcoholic
 - mylittleandysonic1
 - mylittleanhero23
