--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -59,6 +59,7 @@ Subreddits:
 - mylittledramaticstory
 - mylittlefoodmanes
 - mylittlefortress
+- mylittleicons
 - mylittlekindle
 - mylittlelistentothis
 - mylittlelivestream
