--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -63,6 +63,7 @@ Subreddits:
 - mylittlekindle
 - mylittlelistentothis
 - mylittlelivestream
+- mylittlemilkyway
 - mylittlemotorhead
 - mylittlemusician
 - mylittlenanners
