--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -137,6 +137,7 @@ TagImplications:
   +futashy: [+fluttershy, +oc, +ocpony]
   +jappleack: [+applejack, +oc, +ocpony]
   +karma: [+oc, +ocpony]
+  +milkyway: [+oc, +ocpony]
   +raynestorm: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
