--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -78,6 +78,7 @@ Subreddits:
 - mylittlesquidward
 - mylittlesupportgroup
 - mylittletacos
+- mylittletwist
 - mylittlewarhammer
 - mylittlewelcomewagon
 - mylittlewtf
