Add r/mlploungesteamgroup and r/ponyloungerts

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -40,6 +40,7 @@ Subreddits:
 - mlhfis
 - mlpdrawingschool
 - mlplounge
+- mlploungesteamgroup
 - mlpvectors
 - molestia
 - mylittleadventuretime
@@ -87,6 +88,7 @@ Subreddits:
 - pinkiepie
 - ploungemafia
 - ponyanarchism
+- ponyloungerts
 - roseluck
 - rubypinch
 - sapphirestone
@@ -219,6 +221,7 @@ Conflicts:
   /t18:         r/mylittlefoodmanes     # Conflict with r/tacoshy
   /twipoker:    r/mylittlewtf           # Conflict with r/thebestpony
   /woonajuice:  r/mylittledaww          # Duplicated to r/mylittleanime
+  /tonightyou:  r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
 
 RootVariantEmotes:
   r/mylittleanime:
