Conflict fix and update to /rdsad nonsense

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -119,13 +119,13 @@ Generation:
     - /rdsad:
         Emotes:
           "":
-            Image: http://a.thumbs.redditmedia.com/mSf8dSjbL0eTzDg0.png
+            Image: http://e.thumbs.redditmedia.com/Dh6Id_PfG08Fq47d.png
             Offset: [-140, -350]
             Size: [70, 70]
       /rrdsad:
         Emotes:
           "":
-            Image: http://e.thumbs.redditmedia.com/IhA4lCp2kZh1YHZv.png
+            Image: http://d.thumbs.redditmedia.com/tbWBi7_H7mdASEVi.png
             Offset: [-140, -350]
             Size: [70, 70]
     - /rdsad: [+drop, +hidden, +v]
@@ -204,24 +204,25 @@ Sorting:
 - [r/tbpimagedump2, r/thebestpony]  # Probably temporary, for their new subreddit
 
 Conflicts:
-  /abwant:      r/mylittlelivestream    # Conflict with r/applebloom
-  /abworry:     r/tbpimagedump          # Conflict with r/mlpdrawingschool
-  /dw01:        r/daylightemotes        # Conflict with r/gallopfrey
-  /evilhom3r:   r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
-  /hugs:        r/mylittledaww          # Conflict with r/mylittlecirclejerk
-  /ovenmitt:    r/ainbowdash            # Conflict with r/mylittledramaticstory
-  /ppnervous:   r/pinkiepie             # Conflict with r/mlpdrawingschool
-  /rabwant:     r/mylittlelivestream    # Conflict with r/applebloom
-  /rwoonajuice: r/mylittledaww          # Duplicated to r/mylittleanime
-  /s:           r/falloutequestria      # Conflict with r/mylittleanime
-  /sadlyra:     r/mylittleonions        # Conflict with r/mylittleanime
-  /sbf:         r/mylittlewtf           # Duplicated to r/mylittledramaticstory
-  /shrug:       r/vinylscratch          # Conflict with r/mylittlecirclejerk
-  /sphlyrafun:  r/mylittlensfw          # Conflict with r/mylittlechaos
-  /t18:         r/mylittlefoodmanes     # Conflict with r/tacoshy
-  /twipoker:    r/mylittlewtf           # Conflict with r/thebestpony
-  /woonajuice:  r/mylittledaww          # Duplicated to r/mylittleanime
-  /tonightyou:  r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
+  /abwant:        r/mylittlelivestream    # Conflict with r/applebloom
+  /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
+  /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
+  /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
+  /flutterstache: r/flutterlounge       # Conflict with r/ponyloungerts
+  /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
+  /ovenmitt:      r/ainbowdash            # Conflict with r/mylittledramaticstory
+  /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
+  /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
+  /rwoonajuice:   r/mylittledaww          # Duplicated to r/mylittleanime
+  /s:             r/falloutequestria      # Conflict with r/mylittleanime
+  /sadlyra:       r/mylittleonions        # Conflict with r/mylittleanime
+  /sbf:           r/mylittlewtf           # Duplicated to r/mylittledramaticstory
+  /shrug:         r/vinylscratch          # Conflict with r/mylittlecirclejerk
+  /sphlyrafun:    r/mylittlensfw          # Conflict with r/mylittlechaos
+  /t18:           r/mylittlefoodmanes     # Conflict with r/tacoshy
+  /tonightyou:    r/mlploungesteamgroup   # Duplicated to r/ponyloungerts
+  /twipoker:      r/mylittlewtf           # Conflict with r/thebestpony
+  /woonajuice:    r/mylittledaww          # Duplicated to r/mylittleanime
 
 RootVariantEmotes:
   r/mylittleanime:
