--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -64,6 +64,7 @@ Subreddits:
 - mylittlekindle
 - mylittlelistentothis
 - mylittlelivestream
+- mylittlemango
 - mylittlemilkyway
 - mylittlemotorhead
 - mylittlemusician
