--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -58,6 +58,7 @@ Subreddits:
 - mylittledamon
 - mylittledaww
 - mylittledramaticstory
+- mylittlefalloutdiary
 - mylittlefoodmanes
 - mylittlefortress
 - mylittleicons
