--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -44,6 +44,7 @@ Subreddits:
 - mlpvectors
 - molestia
 - mylittleadventuretime
+- mylittlealicorn
 - mylittlealcoholic
 - mylittleandysonic1
 - mylittleanhero23
