--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -210,11 +210,12 @@ Conflicts:
   /abworry:       r/tbpimagedump          # Conflict with r/mlpdrawingschool
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
-  /flutterstache: r/flutterlounge       # Conflict with r/ponyloungerts
+  /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
   /ovenmitt:      r/ainbowdash            # Conflict with r/mylittledramaticstory
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
+  /rapidfire:     r/mylittlechaos         # Conflict with r/mylittlemango
   /rwoonajuice:   r/mylittledaww          # Duplicated to r/mylittleanime
   /s:             r/falloutequestria      # Conflict with r/mylittleanime
   /sadlyra:       r/mylittleonions        # Conflict with r/mylittleanime
