Templatize files with the version number in it, so we don't have to keep changing them

--- a/addon/firefox/package.json
+++ b/addon/firefox/package.json
@@ -1,17 +1,17 @@
 {
-    "author": "Typhos", 
-    "description": "View Reddit ponymotes across the site", 
-    "fullName": "BetterPonymotes", 
-    "id": "jid1-tHrhDJXsKvsiCw", 
-    "license": "MPL 2.0", 
-    "name": "betterponymotes", 
+    "author": "Typhos",
+    "description": "View Reddit ponymotes across the site",
+    "fullName": "BetterPonymotes",
+    "id": "jid1-tHrhDJXsKvsiCw",
+    "license": "MPL 2.0",
+    "name": "betterponymotes",
     "preferences": [
         {
-            "label": "Preferences", 
-            "name": "openPrefs", 
-            "title": "Open prefs", 
+            "label": "Preferences",
+            "name": "openPrefs",
+            "title": "Open prefs",
             "type": "control"
         }
-    ], 
-    "version": "57.91"
+    ],
+    "version": "/*{{version}}*/"
 }
