--- a/addon/chrome/manifest.json
+++ b/addon/chrome/manifest.json
@@ -1,38 +1,38 @@
 {
     "background": {
         "page": "background.html"
-    }, 
+    },
     "content_scripts": [
         {
-            "all_frames": true, 
+            "all_frames": true,
             "js": [
-                "bpm-data.js", 
+                "bpm-data.js",
                 "betterponymotes.js"
-            ], 
+            ],
             "matches": [
                 "*://*/*"
-            ], 
+            ],
             "run_at": "document_start"
         }
-    ], 
-    "description": "View Reddit ponymotes across the site", 
-    "homepage_url": "http://rainbow.mlas1.us/", 
-    "manifest_version": 2, 
-    "minimum_chrome_version": "20", 
-    "name": "BetterPonymotes", 
-    "options_page": "options.html", 
+    ],
+    "description": "View Reddit ponymotes across the site",
+    "homepage_url": "http://rainbow.mlas1.us/",
+    "manifest_version": 2,
+    "minimum_chrome_version": "20",
+    "name": "BetterPonymotes",
+    "options_page": "options.html",
     "permissions": [
-        "http://*.reddit.com/", 
-        "https://*.reddit.com/", 
+        "http://*.reddit.com/",
+        "https://*.reddit.com/",
         "http://*.redditstatic.com/"
-    ], 
-    "version": "57.91", 
+    ],
+    "version": "/*{{version}}*/",
     "web_accessible_resources": [
-        "bpmotes.css", 
-        "emote-classes.css", 
-        "combiners-nsfw.css", 
-        "extracss-pure.css", 
-        "extracss-webkit.css", 
+        "bpmotes.css",
+        "emote-classes.css",
+        "combiners-nsfw.css",
+        "extracss-pure.css",
+        "extracss-webkit.css",
         "gif-animotes.css"
     ]
 }
