--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 /build/*
 /animotes/*.gif
 
+/www/index.html
+/www/changelog.html
+/www/chrome-update.html
+/www/firefox-logo.png
+/www/chrome-logo.png
+/www/opera-logo.png
 /www/betterponymotes.update.rdf
 /www/opera-updates.xml
 
