Rename bpm-data.js data file to bpm-resources.js

--- a/addon/cr-manifest.json
+++ b/addon/cr-manifest.json
@@ -6,7 +6,7 @@
         {
             "all_frames": true,
             "js": [
-                "bpm-data.js",
+                "bpm-resources.js",
                 "betterponymotes.js"
             ],
             "matches": [
