Rewrite build system

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,6 @@
 {
   "version": "/*{{code_version}}*/./*{{data_version}}*/",
   "code_version": "57",
-  "data_version": "91"
+  "data_version": "91",
+  "require_prefix": ""
 }
