Quick conflict fix

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -213,6 +213,7 @@ Conflicts:
   /dw01:          r/daylightemotes        # Conflict with r/gallopfrey
   /evilhom3r:     r/mylittlewtf           # Duplicated to r/mylittlecirclejerk
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
+  /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
   /ovenmitt:      r/ainbowdash            # Conflict with r/mylittledramaticstory
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
