--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -206,6 +206,7 @@ Conflicts:
   /flutterstache: r/flutterlounge         # Conflict with r/ponyloungerts
   /glutes:        r/thebestpony           # Conflict with r/marmemotes
   /hugs:          r/mylittledaww          # Conflict with r/mylittlecirclejerk
+  /mybodyisready: r/marmemotes            # Conflict with r/mylittlemango
   /ovenmitt:      r/ainbowdash            # Conflict with r/mylittledramaticstory
   /ppnervous:     r/pinkiepie             # Conflict with r/mlpdrawingschool
   /rabwant:       r/mylittlelivestream    # Conflict with r/applebloom
