Tag some of r/foe's characters

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -133,15 +133,19 @@ TagImplications:
 
   # OC's
   +apathia: [+oc, +ocpony]
+  +blackjack: [+oc, +ocpony]
+  +calamity: [+oc, +ocpony]
   +daylightdarkle: [+oc, +ocpony]
   +discentia: [+oc, +ocpony]
   +futashy: [+fluttershy, +oc, +ocpony]
   +jappleack: [+applejack, +oc, +ocpony]
   +karma: [+oc, +ocpony]
+  +littlepip: [+oc, +ocpony]
   +milkyway: [+oc, +ocpony]
   +raynestorm: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
+  +velvetremedy: [+oc, +ocpony]
 
   # Nonpony
   +damon: [+nonpony]
