Stylesheet/emote/tag updates 2013-03-10

--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -8,7 +8,7 @@
 "/aj06": ["+applejack"],
 "/aj07": ["+applejack"],
 "/aj08": ["+applejack"],
-"/aj09": ["+remove"],
+"/aj09": ["+applejack"],
 "/aj10": ["+applejack"],
 "/aj11": ["+applejack"],
 "/aj12": ["+applejack"],
@@ -18,7 +18,7 @@
 "/aj16": ["+applejack", "+salute"],
 "/aj17": ["+applejack"],
 "/aj18": ["+applejack"],
-"/aj19": ["+remove"],
+"/aj19": ["+applejack"],
 "/aj20": ["+applejack"],
 "/aj21": ["+applejack"],
 "/aj22": ["+applejack"],
@@ -28,7 +28,7 @@
 "/aj26": ["+applejack"],
 "/aj27": ["+applejack"],
 "/aj28": ["+applejack"],
-"/aj29": ["+remove"],
+"/aj29": ["+applejack"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
 "/ja02": ["+jappleack"],
