Add r/mylittlewarhammer (putting it back after removal)

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -80,6 +80,7 @@ Subreddits:
 - mylittlesupportgroup
 - mylittletacos
 - mylittletwist
+- mylittlewarhammer
 - mylittlewelcomewagon
 - mylittlewtf
 - pankakke
