--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -83,6 +83,7 @@ Subreddits:
 - mylittlewarhammer
 - mylittlewelcomewagon
 - mylittlewtf
+- onetrueprincess
 - pankakke
 - pinkiepie
 - ploungemafia
