Added missing +animote tag

--- a/data/rules.yaml
+++ b/data/rules.yaml
@@ -159,7 +159,7 @@ Generation:
             Size: [621, 511]
     - /today: [+pinkiepie, +animote]
       /imamakethisanemoterealquick: [+shrug]
-      /buzzkillturtle: [+nsfw, +pinkiepie, +derpy]
+      /buzzkillturtle: [+nsfw, +pinkiepie, +derpy, +animote]
       /horseporn: [+v]
 
   # Removed
