Stylesheet/emote/tag updates 2013-03-12

--- a/tags/applejack.json
+++ b/tags/applejack.json
@@ -8,7 +8,7 @@
 "/aj06": ["+applejack"],
 "/aj07": ["+applejack"],
 "/aj08": ["+applejack"],
-"/aj09": ["+applejack"],
+"/aj09": ["+remove"],
 "/aj10": ["+applejack"],
 "/aj11": ["+applejack"],
 "/aj12": ["+applejack"],
@@ -18,7 +18,7 @@
 "/aj16": ["+applejack", "+salute"],
 "/aj17": ["+applejack"],
 "/aj18": ["+applejack"],
-"/aj19": ["+applejack"],
+"/aj19": ["+remove"],
 "/aj20": ["+applejack"],
 "/aj21": ["+applejack"],
 "/aj22": ["+applejack"],
@@ -28,7 +28,37 @@
 "/aj26": ["+applejack"],
 "/aj27": ["+applejack"],
 "/aj28": ["+applejack"],
-"/aj29": ["+applejack"],
+"/aj29": ["+remove"],
+"/apj00": ["+applejack"],
+"/apj01": ["+applejack"],
+"/apj02": ["+remove"],
+"/apj03": ["+remove"],
+"/apj04": ["+remove"],
+"/apj05": ["+remove"],
+"/apj06": ["+remove"],
+"/apj07": ["+remove"],
+"/apj08": ["+remove"],
+"/apj09": ["+remove"],
+"/apj10": ["+applejack"],
+"/apj11": ["+applejack"],
+"/apj12": ["+remove"],
+"/apj13": ["+remove"],
+"/apj14": ["+remove"],
+"/apj15": ["+remove"],
+"/apj16": ["+remove"],
+"/apj17": ["+remove"],
+"/apj18": ["+remove"],
+"/apj19": ["+remove"],
+"/apj20": ["+applejack"],
+"/apj21": ["+applejack"],
+"/apj22": ["+remove"],
+"/apj23": ["+remove"],
+"/apj24": ["+remove"],
+"/apj25": ["+remove"],
+"/apj26": ["+remove"],
+"/apj27": ["+remove"],
+"/apj28": ["+remove"],
+"/apj29": ["+remove"],
 "/ja00": ["+jappleack"],
 "/ja01": ["+jappleack"],
 "/ja02": ["+jappleack"],
