Remove ancient /rdsad compat hacks; nobody should care by now

--- a/tags/applebloom.json
+++ b/tags/applebloom.json
@@ -62,5 +62,7 @@
 "/rabuhoh": ["+v"],
 "/rabwant": ["+v"],
 "/rabyay": ["+v"],
-"/rabzombie": ["+v"]
+"/rabzombie": ["+v"],
+"/rdsad": ["+remove"],
+"/rrdsad": ["+remove"]
 }
