Stylesheet/emote/tag updates 2013-03-17 (also: added +murky, +princesscadance)

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -68,7 +68,7 @@ TagImplications:
   +babseed: [+canon, +major, +pony]
   +bigmac: [+canon, +major, +pony]
   +braeburn: [+canon, +major, +pony]
-  +cadance: [+canon, +major, +pony]
+  +princesscadance: [+canon, +major, +pony]
   +caketwins: [+canon, +major, +pony]
   +cheerilee: [+canon, +major, +pony]
   +queenchrysalis: [+canon, +major, +pony, +villian]
@@ -142,6 +142,7 @@ TagImplications:
   +karma: [+oc, +ocpony]
   +littlepip: [+oc, +ocpony]
   +milkyway: [+oc, +ocpony]
+  +murkynumberseven: [+oc, +ocpony]
   +raynestorm: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
