--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -137,6 +137,7 @@ TagImplications:
   +calamity: [+oc, +ocpony]
   +daylightdarkle: [+oc, +ocpony]
   +discentia: [+oc, +ocpony]
+  +eris: [+discord, +oc] # +discord so it shows up somewhere
   +futashy: [+fluttershy, +oc, +ocpony]
   +jappleack: [+applejack, +oc, +ocpony]
   +karma: [+oc, +ocpony]
@@ -144,6 +145,7 @@ TagImplications:
   +milkyway: [+oc, +ocpony]
   +murkynumberseven: [+oc, +ocpony]
   +raynestorm: [+oc, +ocpony]
+  +snowdrop: [+oc, +ocpony]
   +surprise: [+oc, +ocpony]
   +wildfire: [+oc, +ocpony]
   +velvetremedy: [+oc, +ocpony]
