Add +lightningdust as a tag

--- a/data/tags.yaml
+++ b/data/tags.yaml
@@ -87,6 +87,7 @@ TagImplications:
   +hoitytoity: [+canon, +major, +pony]
   +ironwill: [+canon, +major]
   +kingsombra: [+canon, +major, +pony, +villian]
+  +lightningdust: [+canon, +major, +pony]
   +maredowell: [+canon, +major, +pony]
   +mayor: [+canon, +major, +pony]
   +nightmaremoon: [+canon, +major, +pony, +villian]
